--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,44 @@
 name: Build
 on: [ push, pull_request ]
-
+permissions:
+  packages: write
+env:
+  NUGET_USERNAME: ${{github.repository_owner}}
+  NUGET_FEED_URL: https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
+  VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/${{github.repository_owner}}/index.json,readwrite"
 jobs:
+  populate-vcpkg-cache:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Bootstrap vcpkg
+        run: third-party/vcpkg/bootstrap-vcpkg.bat
+      - name: Add nuget source
+        shell: pwsh
+        run: |
+          .$(third-party/vcpkg/vcpkg fetch nuget) `
+            sources add `
+            -Source "${{ env.NUGET_FEED_URL }}" `
+            -StorePasswordInClearText `
+            -Name GitHubPackages `
+            -UserName "${{ env.NUGET_USERNAME }}" `
+            -Password "${{ secrets.GITHUB_TOKEN }}"
+          .$(third-party/vcpkg/vcpkg fetch nuget) `
+            setapikey "${{ secrets.GITHUB_TOKEN }}" `
+            -Source "${{ env.NUGET_FEED_URL }}"
+      - name: "Install dependencies"
+        run: |
+          third-party/vcpkg/vcpkg install `
+          --triplet x64-windows-static `
+          --x-feature direct2d `
+          --x-feature icu `
+          --x-feature skia 
+
   build:
+    needs: populate-vcpkg-cache
     strategy:
       matrix:
         preset:
@@ -13,8 +49,6 @@ jobs:
           - Skia - Release
     name: "${{matrix.preset}}"
     runs-on: windows-latest
-    env:
-      VCPKG_DEFAULT_BINARY_CACHE: ${{github.workspace}}/.vcpkg-binary-cache
     steps:
       - name: Set up visual studio environment
         shell: pwsh
@@ -32,15 +66,21 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
-      - name: Setup vcpkg binary cache
-        uses: actions/cache@v4
-        with:
-          key: ${{matrix.preset}}-${{hashFiles('vcpkg.json')}}
-          path: ${{env.VCPKG_DEFAULT_BINARY_CACHE}}
+      - name: Bootstrap vcpkg
+        run: third-party/vcpkg/bootstrap-vcpkg.bat
+      - name: Add nuget vcpkg source
+        shell: pwsh
+        run: |
+          .$(third-party/vcpkg/vcpkg fetch nuget) `
+            sources add `
+            -Source "${{ env.NUGET_FEED_URL }}" `
+            -StorePasswordInClearText `
+            -Name GitHubPackages `
+            -UserName "${{ env.NUGET_USERNAME }}" `
+            -Password "${{ secrets.GITHUB_TOKEN }}"
       - name: Configure
         shell: pwsh
         run: |
-          New-Item -Type directory -Force "${{env.VCPKG_DEFAULT_BINARY_CACHE}}"
           New-Item -Type directory build
           cd build
           cmake .. --preset "${{matrix.preset}}"
