--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
         with:
+          fetch-depth: 0
           submodules: true
       - name: Bootstrap vcpkg
         run: third-party/vcpkg/bootstrap-vcpkg.bat
@@ -65,6 +66,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
         with:
+          fetch-depth: 0
           submodules: true
       - name: Bootstrap vcpkg
         run: third-party/vcpkg/bootstrap-vcpkg.bat
