✨ Add basic horizontal slider
refs #84

--- a/src/xaml-to-fui-statictheme/CMakeLists.txt
+++ b/src/xaml-to-fui-statictheme/CMakeLists.txt
@@ -185,6 +185,7 @@ add_winui3_component_theme(RadioButton PARENT Common)
 add_winui3_component_theme(RadioButtons PARENT Common)
 add_winui3_component_theme(ScrollBar PARENT Common)
 add_winui3_component_theme(ScrollView PARENT Common)
+add_winui3_component_theme(Slider PARENT Common)
 add_winui3_component_theme(ToggleSwitch PARENT Common)
 
 add_winui3_component_theme(
