--- a/src/xaml-to-fui-statictheme/CMakeLists.txt
+++ b/src/xaml-to-fui-statictheme/CMakeLists.txt
@@ -183,6 +183,7 @@ add_winui3_component_theme(ContentDialog PARENT Common)
 add_winui3_component_theme(HyperlinkButton PARENT Common)
 add_winui3_component_theme(RadioButton PARENT Common)
 add_winui3_component_theme(RadioButtons PARENT Common)
+add_winui3_component_theme(RepeatButton PARENT Common)
 add_winui3_component_theme(ScrollBar PARENT Common)
 add_winui3_component_theme(ScrollView PARENT Common)
 add_winui3_component_theme(Slider PARENT Common)
