🔨 Support building with ICU but without Skia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,26 @@ option(ENABLE_SKIA "Build with support for Skia" ${ENABLE_IMPLICIT_BACKENDS})
 if (ENABLE_SKIA)
   list(APPEND VCPKG_MANIFEST_FEATURES "skia")
 endif ()
-option(ENABLE_DIRECT2D "Build with support for Direct2D+DirectWrite+D3D11" ${ENABLE_IMPLICIT_BACKENDS})
-if (ENABLE_DIRECT2D)
-  list(APPEND VCPKG_MANIFEST_FEATURES "direct2d")
+
+if (WIN32)
+  option(ENABLE_DIRECT2D "Build with support for Direct2D+DirectWrite+D3D11" ${ENABLE_IMPLICIT_BACKENDS})
+  if (ENABLE_DIRECT2D)
+    list(APPEND VCPKG_MANIFEST_FEATURES "direct2d")
+  endif ()
+else ()
+  set(ENABLE_DIRECT2D OFF)
 endif ()
+
+set(DEFAULT_ENABLE_ICU "${UNIX}")
+if (ENABLE_SKIA)
+  set(DEFAULT_ENABLE_ICU ON)
+endif ()
+option(ENABLE_ICU "Use the ICU library" "${DEFAULT_ENABLE_ICU}")
+if (ENABLE_ICU)
+  list(APPEND VCPKG_MANIFEST_FEATURES "icu")
+endif ()
+
+message(STATUS "vcpkg features enabled: ${VCPKG_MANIFEST_FEATURES}")
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -47,11 +63,6 @@ if (MSVC)
   )
 endif ()
 
-set(DEFAULT_ENABLE_ICU "${UNIX}")
-if (ENABLE_SKIA)
-  set(DEFAULT_ENABLE_ICU ON)
-endif ()
-option(ENABLE_ICU "Use the ICU library" "${DEFAULT_ENABLE_ICU}")
 if (WIN32)
   set(NTDDI_VERSION NTDDI_WIN10)
   if (NOT ENABLE_ICU)
